@@ -2,7 +2,10 @@ PHP 4.0 CHANGE LOG                                                    ChangeLog
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ?? 1999, Version 4.0 Beta 3
-- Add versioning support for shared library (Sascha)
+- Added gpc_globals variable directive to php.ini.  By default it is On, but
+  if it is set to Off, GET, POST and Cookie variables will not be inserted
+  to the global scope.  Mostly makes sense when coupled with track_vars (Zeev)
+- Added versioning support for shared library (Sascha)
 - Added second parameter to array_keys which specifies search value
   for which the key should be returned (Andrey)
 - Resourcified Informix driver (Danny)
